Simplify Transaction Execution Model - Convert to data container, move logic to service